Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90330

qvkgen fails to parse newer (1.1, 1.2) Vulkan registry documents (vk.xml)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.0 Alpha
    • 6.0.0
    • GUI: Vulkan
    • None
    • 2aa7ad5e6716ac01b2b43fa68e4b5d50aaf00944 (qt/qtbase/dev)

      Attempting to upgrade the bundled vk.xml leads to broken qvulkanfunctions cpp and h files.

       

        For Gerrit Dashboard: QTBUG-90330
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes